[package]
name        = "voxidian-logger"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "The logger for Lighthouse and its dependencies."
license     = "GPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianLogger"

edition = "2024"

publish = false

[lints.rust]
unused_parens = "allow"


[dependencies.crossterm]
version = "0.28"

[dependencies.chrono]
version = "0.4"

[dependencies.clap]
version  = "4.5"
features = [ "derive" ]
